--- a/athome2/package.json
+++ b/athome2/package.json
@@ -17,6 +17,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "flatpickr": "^4.6.13",
         "laravel-echo": "^2.0.2",
         "pusher-js": "^8.4.0"
     }
