--- a/athome2/package.json
+++ b/athome2/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "flatpickr": "^4.6.13",
         "laravel-echo": "^2.0.2",
+        "phil-address": "^1.0.1",
         "pusher-js": "^8.4.0"
     }
 }
