gitignore changed for property images

--- a/athome2/.gitignore
+++ b/athome2/.gitignore
@@ -21,3 +21,6 @@ yarn-error.log
 /.nova
 /.vscode
 /.zed
+!/public/storage/seeders/
+!/public/storage/seeders/images/
+!/public/storage/seeders/images/**
